cros: Hide ripple after clicking on views-based shelf button.

Also make the ripple use rounded corners to better match status area ripple.

Bug: 810181
Change-Id: I5fefc8852c305ec7ea25247928d3c05834d2bfca
Reviewed-on: https://chromium-review.googlesource.com/906847
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Jacob Dufault <jdufault@chromium.org>
Cr-Commit-Position: refs/heads/master@{#535461}
Former-commit-id: b9bf332694f083c6767416b69d0f8539d1c44707